# ga2

./: ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  manage.py  pyproject.toml
alerts/: admin.py  models.py  views.py
alerts/management/commands/: import_observations.py  sync_alerts.py
alerts/migrations/: 0001_initial.py  0002_alert_alertobservation.py  0002_dataset_observation.py  0003_add_observation_date_index.py  0003_alter_observation_source_dataset_gbif_key.py
alerts/tests/: test_import_observations.py  test_sync_alerts.py
alerts/tests/models/: test_alert.py  test_dataset.py  test_observation.py  test_user.py
ga2/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
templates/registration/: login.html
