[project]
name = "ga2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "pytest>=8.0",
    "pytest-django>=4.5",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ga2.settings"
pythonpath = ["."]
python_files = ["test_*.py", "tests.py"]
